<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSurface"
        android:elevation="0dp"
        android:theme="?attr/actionBarStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/demo_title_any_layer"
        app:titleTextAppearance="@style/ToolbarTitle" />

    <com.robin.baseframe.widget.SuperButton
        android:id="@+id/bt_drag"
        style="@style/CommonButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_touch_target"
        android:text="@string/any_layer_button_drag"
        android:layout_marginStart="@dimen/space_16"
        android:layout_marginTop="@dimen/space_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar" />


    <com.robin.baseframe.widget.SuperButton
        android:id="@+id/bt_toast"
        style="@style/CommonButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_touch_target"
        android:text="@string/any_layer_button_toast"
        android:layout_marginStart="@dimen/space_16"
        android:layout_marginTop="@dimen/space_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_drag" />


    <com.robin.baseframe.widget.SuperButton
        android:id="@+id/bt_notification"
        style="@style/CommonButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_touch_target"
        android:text="@string/any_layer_button_notification"
        android:layout_marginStart="@dimen/space_16"
        android:layout_marginTop="@dimen/space_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_toast" />


    <com.robin.baseframe.widget.SuperButton
        android:id="@+id/bt_popup"
        style="@style/CommonButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_touch_target"
        android:text="@string/any_layer_button_popup"
        android:layout_marginStart="@dimen/space_16"
        android:layout_marginTop="@dimen/space_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_notification" />


    <com.robin.baseframe.widget.SuperButton
        android:id="@+id/bt_dialog_alpha"
        style="@style/CommonButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_touch_target"
        android:text="@string/any_layer_button_dialog_alpha"
        android:layout_marginStart="@dimen/space_16"
        android:layout_marginTop="@dimen/space_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_popup" />

    <com.robin.baseframe.widget.SuperButton
        android:id="@+id/bt_guide"
        style="@style/CommonButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_touch_target"
        android:text="@string/any_layer_button_guide"
        android:layout_marginStart="@dimen/space_16"
        android:layout_marginTop="@dimen/space_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_dialog_alpha" />

</androidx.constraintlayout.widget.ConstraintLayout>
