<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSurface"
        android:elevation="0dp"
        android:theme="?attr/actionBarStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/demo_title_popup"
        app:titleTextAppearance="@style/ToolbarTitle" />

    <com.robin.baseframe.widget.SuperButton
        android:id="@+id/bt_pop_all"
        style="@style/CommonButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_touch_target"
        android:layout_marginTop="@dimen/space_12"
        android:text="@string/popup_button_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.robin.baseframe.widget.SuperButton
        android:id="@+id/bt_pop_up"
        style="@style/CommonButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_touch_target"
        android:layout_marginTop="@dimen/space_12"
        android:text="@string/popup_button_up"
        app:layout_constraintBottom_toTopOf="@id/bt_pop_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.robin.baseframe.widget.SuperButton
        android:id="@+id/bt_pop_down"
        style="@style/CommonButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_touch_target"
        android:layout_marginTop="@dimen/space_12"
        android:text="@string/popup_button_down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_pop_up" />


    <com.robin.baseframe.widget.SuperButton
        android:id="@+id/bt_pop_left"
        style="@style/CommonButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_touch_target"
        android:layout_marginTop="@dimen/space_12"
        android:text="@string/popup_button_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bt_pop_right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.robin.baseframe.widget.SuperButton
        android:id="@+id/bt_pop_right"
        style="@style/CommonButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_touch_target"
        android:layout_marginTop="@dimen/space_12"
        android:text="@string/popup_button_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bt_pop_left"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
