<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSurface"
        android:elevation="0dp"
        android:theme="?attr/actionBarStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/demo_title_notification"
        app:titleTextAppearance="@style/ToolbarTitle" />

    <com.robin.baseframe.widget.SuperButton
        android:id="@+id/bt_normal_notification"
        style="@style/CommonButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_touch_target"
        android:layout_marginTop="@dimen/space_16"
        android:text="@string/notification_title_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar" />


    <com.robin.baseframe.widget.SuperButton
        android:id="@+id/bt_high_notification"
        style="@style/CommonButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_touch_target"
        android:layout_marginTop="@dimen/space_16"
        android:text="@string/notification_title_high"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_normal_notification" />

    <com.robin.baseframe.widget.SuperButton
        android:id="@+id/bt_progress_notification"
        style="@style/CommonButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_touch_target"
        android:layout_marginTop="@dimen/space_16"
        android:text="@string/notification_title_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_high_notification" />

    <TextView
        android:id="@+id/tv_permission_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_16"
        android:layout_marginTop="@dimen/space_16"
        android:layout_marginEnd="@dimen/space_16"
        android:gravity="center"
        android:text="@string/notification_permission_denied_hint"
        android:textColor="@color/colorError"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_progress_notification"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
