<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSurface"
        android:elevation="0dp"
        android:theme="?attr/actionBarStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/demo_title_count_down"
        app:titleTextAppearance="@style/ToolbarTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_count_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar" />

    <com.robin.baseframe.widget.SuperButton
        android:id="@+id/bt_start"
        style="@style/CommonButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_touch_target"
        android:layout_marginTop="@dimen/space_20"
        android:text="@string/count_down_button_start"
        app:layout_constraintEnd_toStartOf="@id/bt_stop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_count_down" />

    <com.robin.baseframe.widget.SuperButton
        android:id="@+id/bt_stop"
        style="@style/CommonButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_touch_target"
        android:layout_marginTop="@dimen/space_20"
        android:text="@string/count_down_button_stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bt_start"
        app:layout_constraintTop_toBottomOf="@id/tv_count_down" />

    <com.robin.baseframe.widget.SuperButton
        android:id="@+id/bt_create_data"
        style="@style/CommonButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_touch_target"
        android:layout_marginTop="@dimen/space_20"
        android:text="@string/count_down_button_create_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_start" />

    <com.robin.baseframe.ui.component.DemoStateView
        android:id="@+id/demo_state_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>
