<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSurface"
        android:elevation="0dp"
        android:theme="?attr/actionBarStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/home_toolbar_title"
        app:titleTextAppearance="@style/ToolbarTitle" />

    <TextView
        android:id="@+id/home_kicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_16"
        android:layout_marginTop="@dimen/space_20"
        android:layout_marginEnd="@dimen/space_16"
        android:letterSpacing="0.12"
        android:text="@string/home_kicker"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar" />

    <TextView
        android:id="@+id/home_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_16"
        android:layout_marginTop="@dimen/space_4"
        android:layout_marginEnd="@dimen/space_16"
        android:text="@string/home_title"
        android:textColor="@color/colorOnSurface"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_kicker" />

    <TextView
        android:id="@+id/home_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_16"
        android:layout_marginTop="@dimen/space_8"
        android:layout_marginEnd="@dimen/space_16"
        android:text="@string/home_subtitle"
        android:textColor="@color/colorOnSurfaceVariant"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_title" />

    <TextView
        android:id="@+id/home_demo_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_16"
        android:layout_marginTop="@dimen/space_12"
        android:layout_marginEnd="@dimen/space_16"
        android:textColor="@color/colorOnSurfaceVariant"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_subtitle"
        tools:text="13 个可运行 Demo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/demo_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="@dimen/space_12"
        android:paddingTop="@dimen/space_8"
        android:paddingEnd="@dimen/space_12"
        android:paddingBottom="@dimen/space_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_demo_count"
        tools:listitem="@layout/item_demo_catalog" />

</androidx.constraintlayout.widget.ConstraintLayout>
